additional fixes